# sympnet-sweep

./: .gitignore  README.md  pyproject.toml  sweep_ex.sh
apps/: run_sweep.py  save_dataset.py
configs/: sweep.yaml
src/sympnet_sweep/: config.py  systems.py  trial.py  utils.py
