[project]
name = "sympnet_sweep"
version = "0.1.0"
description = "Experimenting with SympNets as applied to various physical systems (e.g. Duffing oscillator)"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "matplotlib >= 3.10.3",
    "numpy >= 2.2.6",
    "python-dotenv >= 1.1.0",
    "ray[default] >= 2.46.0",
    "scikit-learn >= 1.6.1",
    "scipy >= 1.15.3",
    "seaborn >= 0.13.2",
    "strupnet >= 0.0.4",
    "torch >= 2.7.0",
    "wandb >= 0.19.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.sources]
"src" = ""